--- a/index.html
+++ b/index.html
@@ -12,28 +12,8 @@
     </head>
     <body>
         <div id="app">
-            <header>
-                <img src="./assets/logo.svg" alt="logo nlw">
-            </header>
-
-            <main id="cards">
-                <div class="card">
-                    <h2>24/11 <span>quinta</span></h2>
-                    <ul>
-                        <li>
-                            <img src="./assets/icon-switzerland.svg" alt="switzerland">
-                            <strong>07:00</strong>
-                            <img src="./assets/icon-cameroon.svg" alt="cameroon">
-                        </li>
-
-                        <li>
-                            <img src="./assets/icon-portugal.svg" alt="portugal">
-                            <strong>16:00</strong>
-                            <img src="./assets/icon-ghana.svg" alt="ghana">
-                        </li>
-                    </ul>
-                </div>
-            </main>
+            
         </div>
+        <script src="./main.js"></script>
     </body>
 </html>
